Bug fixes: clicking on next while typing, gap in step 2 title

--- a/packages/special-pages/pages/onboarding/app/components/v3/Heading.module.css
+++ b/packages/special-pages/pages/onboarding/app/components/v3/Heading.module.css
@@ -136,6 +136,11 @@
     padding-top: var(--sp-3);
 }
 
+.titleContainer {
+    display: grid;
+    gap: var(--sp-2);
+}
+
 .hidden {
     visibility: hidden;
     opacity: 0;
